# mutable_merkle

./: .bumpversion.cfg  .coveragerc  .gitignore  .isort.cfg  .travis.yml  CHANGELOG.md  Makefile  README.md  README.rst  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: style.yml  tests.yml
mutable_merkle/: __init__.py  tree.py  util.py
release_notes/: 1.feat
tests/: conftest.py
tests/benchmark/: test_optimizations.py  test_tree.py
tests/unit/: test_tree.py
