[tool.poetry]
name = "mutable_merkle"
version = "0.1.1"
description = "A Merkle tree supporting append, update, remove operations."
authors = ["Daniel Edgecombe <edgy.edgemond@gmail.com>"]
license = "Apache-2.0"
repository="https://github.com/EdgyEdgemond/mutable_merkle/"
homepage="https://github.com/EdgyEdgemond/mutable_merkle/"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.5"

[tool.poetry.dev-dependencies]

bump2version = "^0.5.11"
changelog_gen = "^0.6.0"
flake8 = "^3.7"
flake8-commas = "^2.0"
flake8-isort = "^2.7"
flake8-quotes = "^2.1"
isort = "^4.3"
pytest = "^5.2"
pytest-cov = "^2.8"
pytest-random-order = "^1.0"

[build-system]
requires = ["poetry<1.0"]
build-backend = "poetry.masonry.api"
